--- a/Template LaTeX/TeXFiles/newIntro.tex
+++ b/Template LaTeX/TeXFiles/newIntro.tex
@@ -1,6 +1,8 @@
 
 \chapter*{Introduction générale}
 \addcontentsline{toc}{chapter}{Introduction générale}
+\begin{comment}
+
 Actuellement, à travers les progrès de la technologie, le smartphone est devenu un outil
 indispensable de travail qui peut apporter un plus dans la vie professionnelle et sociale de tout
 un chacun. D’ailleurs cela s’illustre parfaitement dans le domaine du Mobile Money qui est
@@ -29,7 +31,15 @@ L'arrivée des Nouvelles Technologies de l'Information et de la Communication a 
 très important sur les attitudes et les stratégies des entreprises face au CRM. Si bien que l'on peut se
 demander si l'E-CRM, la gestion de la relation client par Internet constitue une véritable révolution
 pour le CRM.
+	content...
+\end{comment}
+Étant donné que nous sommes dans un monde le smartphone deviant de plus en plus présent dans la vie  de l'être humain, il est impératif que toutes les transactions financières soient disponibles via celui-ci.  Sur la base de cette règle, fournir une application à travers laquelle les fonds peuvent être transférés de  vers l'intérieur du pays , est une nécessité.  Les applications existant , on constate qu'elles manquent de rapidité pour déterminer l'identité de l'expéditeur et la validité des comptes, en plus, la possibilité que ces pièce justificative soit invalide, ou qu'il y ait des fautes d'orthographe au cours de saisir.\newline
+Le remplacement de l’extraction manuelle par l’extraction automatique des données réduit considérablement le risque d’erreurs humaines. Il en résulte donc une amélioration globale de la précision. 
 
+
+
+ 
+%ou la possibilité de créer plusieurs comptes par le même NNI \footnote{Numéro National d'Identification}.
 
 
 
