--- a/Template LaTeX/TeXFiles/new_Conclusion.tex
+++ b/Template LaTeX/TeXFiles/new_Conclusion.tex
@@ -1,6 +1,6 @@
 \chapter*{Conclusion}
 \addcontentsline{toc}{chapter}{Conclusion}
-Dans ce chapitre, avons décrit brièvement le processus de développement de notre application
+Dans ce chapitre, nous avons décrit brièvement le processus de développement de notre application
 de transfert d'argent en spécifiant l’environnement de développement, le choix des
 outils ainsi que la démarche suivie pour la réalisation.
 En effet, nous avons achevé l’implémentation tout en respectant la conception, mais les tests
